Temp working FileInputStream filereading, not working for JAR usage